--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "rbx-proxy",
+  "name": "rbx-proxy-local",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "start": "node -r dotenv/config server.mjs"
+    "start": "node server.mjs"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.1.0",
-    "node-fetch": "^3.3.2",
-    "serverless-http": "^4.0.0"
+    "express": "^5.1.0"
   }
 }
